# tttarena

./: .gitignore  README.md  baseline.ipynb  main.py  pyproject.toml
tests/: test_engine.py
tttarena/simulator/: runner.py
