[project]
name = "tttarena"
version = "0.1.3"
description = "Deterministic, turn-based Tetris engine with 'Nightmare' mechanics (target curve, petrification, entropy budget)"
authors = [
    {name = "naereni"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "numba (>=0.61.2,<0.62.0)",
]


[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.2"


[tool.poetry.group.dev.dependencies]



[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
